# advent-of-code

./: .gitignore  README.md  day14_docking.py  day1_reportRepair.py  day2_password.py  day3_toboggan.py  day4_passport.py  day5_boarding.py  flake.nix
2020/day13/: day13_buses.py
2020/day15/: day15_memorygame.py
2020/day21/: day21.py
2020/day22/: day22.py
2020/day5/: day5_boarding.py
2020/day6/: day6_customs.py
2020/day7/: day7_bags.py
2020/day8/: day8_game.py
2023/aoc23py/: pyproject.toml
2023/aoc23py/src/aoc23py/: __main__.py
2023/aoc23py/src/aoc23py/days/: __init__.py  day01.py
2023/aoc23rs/: Cargo.toml
2023/aoc23rs/src/: lib.rs  main.rs
2023/aoc23rs/src/days/: day01.rs
